--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -39,6 +40,7 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.33",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.3"
