--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
