--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -11,6 +11,7 @@
         "bensampo/laravel-enum": "^6.11",
         "cviebrock/eloquent-sluggable": "^10.0",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
+        "edsdk/flmngr-server-php": "^1.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
