--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -13,6 +13,7 @@
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "edsdk/flmngr-server-php": "^1.6",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image-laravel": "^1.3",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
